--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1295,9 +1295,27 @@ jobs:
             ./deploy.sh "$IMAGE_REPO" "$IMAGE_TAG"
           ENDSSH
           
-          echo "Verifying pods are scheduled on worker nodes..."
-          sleep 10
+          echo "Ensuring deployment uses nodeSelector for worker nodes..."
           ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ubuntu@$CONTROL_PLANE_IP <<ENDSSH
+            # Patch the deployment to add nodeSelector if it doesn't exist
+            echo "Checking current deployment spec..."
+            if ! kubectl get deployment itam-app -o jsonpath='{.spec.template.spec.nodeSelector}' | grep -q "worker"; then
+              echo "Adding nodeSelector to deployment..."
+              kubectl patch deployment itam-app -p '{"spec":{"template":{"spec":{"nodeSelector":{"node-role.kubernetes.io/worker":"true"}}}}}' || echo "Patch failed, may need to update manually"
+              echo "Waiting for deployment to update..."
+              sleep 10
+            else
+              echo "nodeSelector already exists in deployment"
+            fi
+          ENDSSH
+          
+          echo "Verifying pods are scheduled on worker nodes..."
+          sleep 15
+          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ubuntu@$CONTROL_PLANE_IP <<ENDSSH
+            echo "Current node labels:"
+            kubectl get nodes --show-labels
+            echo ""
+            echo "Current pod distribution:"
             kubectl get pods -l app=itam-app -o wide
             echo ""
             echo "Checking node distribution..."
@@ -1305,6 +1323,21 @@ jobs:
             if [ "$PODS_ON_CONTROL" != "0" ]; then
               echo "⚠ WARNING: $PODS_ON_CONTROL pod(s) are still on control plane"
               echo "This may cause ALB health check failures"
+              echo ""
+              echo "Deleting pods to force rescheduling on worker nodes..."
+              kubectl delete pods -l app=itam-app --force --grace-period=0 || true
+              echo "Waiting for pods to reschedule on worker nodes..."
+              sleep 30
+              kubectl get pods -l app=itam-app -o wide
+              
+              # Check again
+              PODS_ON_CONTROL=$(kubectl get pods -l app=itam-app -o wide --no-headers | grep k8s-controller | wc -l || echo "0")
+              if [ "$PODS_ON_CONTROL" != "0" ]; then
+                echo "⚠ ERROR: Pods are still on control plane after rescheduling"
+                echo "This indicates the nodeSelector is not working or worker nodes are not labeled"
+              else
+                echo "✓ Pods successfully rescheduled to worker nodes"
+              fi
             else
               echo "✓ All pods are on worker nodes"
             fi
